[Smart Connection Scripting Guide] Alignment and HTML character fixes.

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -25,7 +25,7 @@ div.toc {
 .section-intro {
   position: absolute;
   padding-top:150px;
-  padding-left:250px;
+  padding-left:25px;
   padding-right: 50px;
 
 }
